tests/snapshots/examples_fixtures/type_system__failing__40_effect_alias_print_in_time_function.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/40_effect_alias_print_in_time_function.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Effect

requires effect `Console` but the enclosing context does not provide it

  examples/type_system/failing/40_effect_alias_print_in_time_function.flx:5:5
  |
5 |     p("tick")
  |     ^^^^^^^^^
  |     --------- requires `Console`

Hint:
  annotate the enclosing function with `with Console`
== stdout ==
<not executed>
